Made window shadow colors darker.

--- a/gtk-3.0/Stylus/Unity.styl
+++ b/gtk-3.0/Stylus/Unity.styl
@@ -14,7 +14,7 @@ UnityDecoration
 
     -UnityDecoration-shadow-offset-x: 			2.5px;
     -UnityDecoration-shadow-offset-y: 			2.5px;
-    -UnityDecoration-active-shadow-color: 		ShadowColor;
+    -UnityDecoration-active-shadow-color: 		shadow-color(normal, normal);
     -UnityDecoration-active-shadow-radius: 		10px;
     -UnityDecoration-inactive-shadow-color: 	ShadowColor;
     -UnityDecoration-inactive-shadow-radius: 	10px;
@@ -67,4 +67,4 @@ UnityDecoration
     color:                  UnityPanelTextColor;
 
     &.panel-title
-        color:          transparent;
+        color:              transparent;
