Fixed Unity panel menu button highlighting and selection bugs.

--- a/gtk-3.0/Stylus/Menus.styl
+++ b/gtk-3.0/Stylus/Menus.styl
@@ -48,13 +48,13 @@ GtkImageMenuItem
             button-text-color:  TextColorSelected;
 
 
-
     // Governs the very first menu items, which is what is displayed on menu bars.
     .menubar > &,
     GtkMenuBar > &,
-    GtkMenuBar.menubar > &
-        border-radius:              0.25em;
-        color:                      TextColorLight;
+    GtkMenuBar.menubar > &,
+    .unity-panel > &
+        border-radius:              0.125em;
+        color:                      TextColor;
         padding:                    0.25em 0.5em;
         text-shadow:                none;
 
