--- a/gtk-3.0/Stylus/Bars.styl
+++ b/gtk-3.0/Stylus/Bars.styl
@@ -11,14 +11,26 @@
     border-radius:      2em;
     padding:            0.125em;
 
+    row:selected:focused
+        background-color:   WindowColorDimmer;
+        background-image:   none;
+        color:              TextColor;
+
 /* GTKPROGRESSBAR - Governs ordinary vertical and horizontal progress bar controls. */
+.progressbar,
 GtkProgressBar,
 GtkProgressBar.progressbar
     -GtkProgressBar-min-horizontal-bar-height:  15;
     -GtkProgressBar-min-vertical-bar-width:     15;
 
+    background-image:           ProgressBarGradientVertical;
     border:                     1px solid transparent;
     border-radius:              2em;
+
+    &:backdrop
+        background-color:       ProgressBarColorDim;
+        background-image:       none;
+        color:                  TextColorHighlighted;
 
     &.horizontal
         background-image:       ProgressBarGradientVertical;
@@ -92,25 +104,17 @@ GtkScale.scale
     -GtkWidget-focus-line-width:    0;
 
     &.horizontal
-        margin: 0.25em 0em 0.25em 0em;
+        margin:                     0.25em 0em 0.25em 0em;
         &.trough.highlight
             background-image:       SelectionGradientVerticalInverted;
 
-    &.mark
-        color:      TextColorDim;
+    &.mark                          { color: TextColorDim; }
 
     &.slider.horizontal,
     &.slider.vertical
-        border-radius:  2em;
-        // background-image: -gtk-gradient(
-        //     radial,
-        //     0.375 0.375, 0.125,
-        //     0.5 0.5, 0.875,
-        //     color-stop(0.125, shade(HighlightColor, lighter)),
-        //     color-stop(0.5, shade(HighlightColor, semilight)),
-        //     color-stop(0.875, shade(HighlightColor, darker)));
+        border-radius:              2em;
         background-image:           rgradient(White, VeryDarkSilver);
-        margin:     0.125em;
+        margin:                     0.125em;
 
     &.trough
         @extends .trough;
@@ -122,3 +126,6 @@ GtkScale.scale
         margin: 0em 0.25em 0em 0.25em;
         &.trough.highlight
             background-image:       SelectionGradientHorizontalInverted;
+            &:backdrop
+                background-color:   HighlightColor;
+                background-image:   none;
