Moved the Nautilus item styling over to this file.
It's probably where it belonged anyway, since it's pretty app-
specific.

--- a/gtk-3.0/Stylus/Minutiae.styl
+++ b/gtk-3.0/Stylus/Minutiae.styl
@@ -31,10 +31,23 @@ ECalendar
             color: TextColor;
         &:hover GtkArrow
             color: TextColorHighlighted;
-            
+
 
 
 /** GNOME TERMINAL **/
 TerminalScreen
     background-color:   WindowColorDark;
     color:              VibrantBlue;
+
+
+
+/** NAUTILUS **/
+.nautilus-canvas-item
+    border-radius:              0.5em;
+    &:active                    { background-color: Orchid; }
+    &:prelight, &:selected
+        background-color:       alpha(SelectionColor, 0.75);
+        color:                  TextColorSelected;
+
+    &.nautilus-desktop, &.nautilus-desktop:backdrop
+        color:                  White;
