Partially fixed the transparency issue with CSD windows.
This required manually patching, building, and installing Compiz so
that CSD windows don't show up with a black backing window. I suspect
that those black windows might be frame windows that Compiz reparents
others into, but I'm not totally sure as of now.

Although the newly patched Compiz works pretty well, it has the odd
side-effect of changing the selector that ultimately gets applied to
CSD windows in Compiz. Instead of the '.solid-csd' that was present
before (beginning with Ubuntu 15.10; never saw it in 15.04), these
windows are again tagged with the simple '.csd' selector (as they
were in 15.04). Presumably, this is how things are supposed to work;
I know Ubuntu's handling of CSD windows attempts to override that
designation and make them server-side decorated, but I don't know
where exactly that occurs. Without caring enough to scour Ubuntu's
and Compiz's codebase, I'm just going to guess that Compiz plays a
role there.

To partially address this issue, I've divided CSD styling into two
separate selectors: one for CSD windows recognized by the patched
Compiz ('.csd') and one for unrecognized windows ('.solid-csd').
It's not perfect, but it's the best I can do for now.

--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -15,8 +15,25 @@ GtkWindow
     &:backdrop
         background-color:   WindowColorDim;
 
+
+
 /* CSD - Controls windows that undergo decoration on the client side. */
-.csd,
+.csd
+    @extends .background
+
+    /* WINDOW-FRAME - Controls the outer window frame of applications decorated on the client side. */
+    &.window-frame,
+    &.window-frame:backdrop
+        background-clip:    border-box;
+        bevel:              1px outset;
+        border-radius:      0.5em;
+        box-shadow:         0.25em 0.25em 1em shadow-color(normal, normal);
+
+    &.background
+        bevel:              1px outset;
+        border-radius:      0em 0em 0.5em 0.5em;
+        border-top:         none;
+
 .solid-csd
     @extends .background
 
@@ -25,14 +42,12 @@ GtkWindow
     &.window-frame:backdrop
         bevel:              1px outset;
         border-radius:      0.5em;
-        /*box-shadow:         0.5em 0.5em 1em shadow-color(normal, normal);*/
+        //box-shadow:         0.25em 0.25em 1em shadow-color(normal);
         box-shadow:         none;
         margin:             0em 0.25em 0.25em 0.25em;
 
-
 .dnd
     border: 1px solid SelectionColor;
-
 
 .header-bar
     padding: 0.25em;
@@ -53,6 +68,9 @@ GtkWindow
     background-color:       MenuColor;
     border-radius:          0.5em;
     color:                  MenuTextColor;
+
+
+
 
 /* POPOVER - Governs windows that behave similarly to 'popup' instances.
  *
