Fixed breadcrumb buttons that were being styled flat.

--- a/gtk-3.0/Stylus/Buttons.styl
+++ b/gtk-3.0/Stylus/Buttons.styl
@@ -44,8 +44,7 @@ button-text-color(c)
             background-image:       HighlightGradientVerticalInverted;
             button-text-color:      TextColorHighlighted;
 
-    &.flat,
-    .primary-toolbar &
+    &.flat
         flat();
         border:                     1px solid transparent;
         border-radius:              0.25em;
@@ -111,6 +110,7 @@ button-text-color(c)
         &:only-child
             border-radius:          0.5em;
             border-width:           1px;
+
 
 
 /* COLUMN-HEADER - Governs the title buttons at the top of sortable lists. */
