Removed the importing of old control assets.
This wasn't working anyway and was generating minor errors in the
console, so I just commented it out for the time being. At some
point soon I'll go through and create my own icons for the UI
widgets that are currently being affected (pretty much only radio
and checkbox controls).

--- a/gtk-3.0/Stylus/Main.styl
+++ b/gtk-3.0/Stylus/Main.styl
@@ -2,7 +2,7 @@
 @import 'Standards/Colors/UI';
 @import 'Standards/UI/Styles';
 
-@css { @import url("Stylus/gtk-widgets-assets.css"); }
+// @css { @import url("Stylus/gtk-widgets-assets.css"); }
 
 
 
