Tweaked cell and table padding parameters.
When found in tables or cells, certain UI controls and elements
have been cropped away at their left or right edges. This issue is
particularly noticeable with checkboxes. I messed around with the
padding parameters, and although its behavior appears buggy to me,
I think I landed on an agreeable solution.

I'm losing some left-right padding distance here, but combined with
a custom-made smaller checkbox image (see the most recent commits
in the icon folder), the problem is essentially solved.

--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -32,7 +32,7 @@ button-text-color(c)
     -GtkTreeView-expander-size:         10;
     -GtkTreeView-indent-expanders:      true;
     -GtkTreeView-vertical-separator:    0;
-    padding:                            0.25em 0.5em 0.25em 0.5em;
+    padding:                            0.25em;
 
     .cell,
     row
