--- a/gtk-3.0/Stylus/Controls.styl
+++ b/gtk-3.0/Stylus/Controls.styl
@@ -118,14 +118,27 @@ GtkComboBox
 
     &:checked
         icon: "Icons/Checkbox-Checked.svg";
-        &:backdrop                  { icon: "Icons/Checkbox-Checked-Backdrop.svg"; }
-        &:inconsistent              { icon: "Icons/Checkbox-Checked-Partial.svg"; }
-        &:inconsistent:backdrop     { icon: "Icons/Checkbox-Checked-Partial-Backdrop.svg"; }
+        &:backdrop                      { icon: "Icons/Checkbox-Checked-Backdrop.svg"; }
+        &:inconsistent                  { icon: "Icons/Checkbox-Checked-Partial.svg"; }
+        &:inconsistent:backdrop         { icon: "Icons/Checkbox-Checked-Partial-Backdrop.svg"; }
 
     &:insensitive
         icon: "Icons/Checkbox-Inactive.svg";
-        &:checked                   { icon: "Icons/Checkbox-Checked-Inactive.svg"; }
-        &:inconsistent              { icon: "Icons/Checkbox-Checked-Partial-Inactive.svg"; }
+        &:checked                       { icon: "Icons/Checkbox-Checked-Inactive.svg"; }
+        &:inconsistent                  { icon: "Icons/Checkbox-Checked-Partial-Inactive.svg"; }
+
+    .cell
+        icon: "Icons/Checkbox-Small.svg";
+        &:checked
+            icon: "Icons/Checkbox-Small-Checked.svg";
+            &:backdrop                  { icon: "Icons/Checkbox-Small-Checked-Backdrop.svg"; }
+            &:inconsistent              { icon: "Icons/Checkbox-Small-Checked-Partial.svg"; }
+            &:inconsistent:backdrop     { icon: "Icons/Checkbox-Small-Checked-Partial-Backdrop.svg"; }
+
+        &:insensitive
+            icon: "Icons/Checkbox-Small-Inactive.svg";
+            &:checked                   { icon: "Icons/Checkbox-Small-Checked-Inactive.svg"; }
+            &:inconsistent              { icon: "Icons/Checkbox-Small-Checked-Partial-Inactive.svg"; }
 
 /* GTKEXPANDER - Governs the small arrow icon found next to expandable controls.
  *
