Created new separate SVG images for sliders and separators.
I've never been completely happy with any of the separators or
sliders in this theme, and there isn't a lot more I can do via CSS
alone, so I decided to just create separate artwork for these
particular controls. I have to say, though: now that I've seen how
much more power I have over appearance compared to CSS, I'm tempted
to redo a bunch of stuff that's less than satisfactory. These
controls now look unnaturally good relative to some other things.

--- a/gtk-3.0/Stylus/Bars.styl
+++ b/gtk-3.0/Stylus/Bars.styl
@@ -112,9 +112,10 @@ GtkScale.scale
 
     &.slider.horizontal,
     &.slider.vertical
-        border-radius:              2em;
-        background-image:           rgradient(White, VeryDarkSilver);
-        margin:                     0.125em;
+        margin:                     0px;
+        background-clip:            border-box;
+        image:                      "Icons/Slider.svg";
+        &:backdrop                  { image: "Icons/Slider-Backdrop.svg"; }
 
     &.trough
         @extends .trough;
@@ -123,9 +124,16 @@ GtkScale.scale
             background-image:       none;
 
     &.vertical
-        margin: 0em 0.25em 0em 0.25em;
+        margin:                     0em 0.25em 0em 0.25em;
         &.trough.highlight
             background-image:       SelectionGradientHorizontalInverted;
             &:backdrop
                 background-color:   HighlightColor;
                 background-image:   none;
+
+
+.separator
+    &.horizontal, &.menuitem
+        border-image:   -gtk-scaled(url("Icons/Separator-Horizontal.svg")) 1 0 1 0 / 1px 0px 1px 0px stretch;
+    &.vertical
+        border-image:   -gtk-scaled(url("Icons/Separator-Vertical.svg")) 0 1 0 1 / 0px 1px 0px 1px stretch;
