Created separate SVG artwork for GtkSwitch controls.
These were always my least favorite element of my theme, and now
they've been vastly improved. Styling them via CSS was a losing
battle from the very beginning; they have several properties with
fixed values or values tied to other properties, and it interfered
greatly with shaping their appearance. I therefore decided to just
create separate SVG images for them, and I think the results are
much more satisfying.

--- a/gtk-3.0/Stylus/Controls.styl
+++ b/gtk-3.0/Stylus/Controls.styl
@@ -187,20 +187,24 @@ GtkExpander.expander
     flat();
 
 GtkSwitch
-    background-image:   rgradient(White, VeryDarkSilver);
-    border:             1px solid transparent;
-    border-radius:      2em;
+    -GtkSwitch-slider-width:    48;
+
+    &.trough,
+    &.slider
+        blank();
+
+    &.slider
+        image:          "Icons/Switch-Slider.svg";
+        &:active
+            image:      "Icons/Switch-Slider-On.svg";
+            &:backdrop  { image: "Icons/Switch-Slider.svg"; }
 
     &.trough
-        shallow-inset();
-        color:              TextColor;
-
+        image:          "Icons/Switch-Trough.svg";
         &:active
-            background-color:   SelectionColor;
-            color:              TextColorSelected;
-            &:backdrop
-                background-color:   HighlightColor;
-                color:              TextColorHighlighted;
+            image:      "Icons/Switch-Trough-On.svg";
+            &:backdrop  { image: "Icons/Switch-Trough-On-Backdrop.svg"; }
+
 
 .radio
     icon: "Icons/Radio.svg";
@@ -214,7 +218,3 @@ GtkSwitch
         icon: "Icons/Radio-Inactive.svg";
         &:checked                   { icon: "Icons/Radio-Checked-Inactive.svg"; }
         &:inconsistent              { icon: "Icons/Radio-Checked-Partial-Inactive.svg"; }
-
-.separator
-    color:      TextColor;
-    &:backdrop  { color: TextColorDim; }
