Updated sidebars to work with the new separator artwork.

--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -70,11 +70,14 @@ GtkPlacesSidebar
     .view                               { padding: 0.5em; }
 
     .list
-        .separator                      { color: transparent; }
+        .separator
+            blank();
+                    
         .sidebar-item,
         .sidebar-item.button
             @extends GtkWidget;
             button-text-color:          TextColor;
+
             &:selected
                 background-image:       SelectionGradientVertical;
                 button-text-color:      TextColorSelected;
