Increased the padding on CSD header bars.
Buttons appearing within this bar were too close to the window
edge and looked odd.

--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -34,6 +34,9 @@ GtkWindow
         border-radius:      0em 0em 0.5em 0.5em;
         border-top:         none;
 
+    .titlebar.header-bar
+        padding:            0.75em 0.75em 0px 0.75em;
+
 .solid-csd
     @extends .background
 
@@ -47,9 +50,6 @@ GtkWindow
 
 .dnd
     border: 1px solid SelectionColor;
-
-.header-bar
-    padding: 0.25em;
 
 /* OVERSHOOT - Governs decorations drawn on the sides of GtkScrolledWindow controls when attempting to scroll too far. */
 .overshoot,
