--- a/gtk-3.0/Stylus/Bars.styl
+++ b/gtk-3.0/Stylus/Bars.styl
@@ -133,7 +133,7 @@ GtkScale.scale
 
 
 .separator
-    &.horizontal, &.menuitem
+    &.horizontal
         border-image:   -gtk-scaled(url("Icons/Separator-Horizontal.svg")) 1 0 1 0 / 1px 0px 1px 0px stretch;
     &.vertical
         border-image:   -gtk-scaled(url("Icons/Separator-Vertical.svg")) 0 1 0 1 / 0px 1px 0px 1px stretch;
